Cleaned up some select card actions